<resources>
    <string name="app_name">Movie Browser</string>
    <string name="sortByName">Sort By Name</string>
    <string name="sortByRating">Sort By Rating</string>
    <string name="sortByYear">Sort By Year</string>
    <string name="quality">Quality:</string>
    <string name="rating">Rating:</string>
    <string name="year">Year:</string>
    <string name="genre">Genre:</string>
    <string name="prompt">All</string>
    <string name="search">Search</string>
    <string name="searchName">Enter movie name: </string>
    <string name="browse">Browse Movies</string>
    <string name="recent">Recent Movies</string>
    <string name="top">Top Rated Movies</string>
    <string name="load_more_button">Load More</string>
    <string name="loading">Connecting</string>
    <string name="gathering_data">Your app to the latest movies</string>
    <string name="order">Order By:</string>
    <string name="AvailableIn">Available in:</string>
    <string name="element_text">Element</string>

    <string-array name="rating_filter">
        <item>All</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="quality_filter">
        <item>All</item>
        <item>720p</item>
        <item>1080p</item>
        <item>3D</item>
    </string-array>
    <string-array name="order_filter">
        <item>Alphabetical</item>
        <item>Year</item>
        <item>Rating</item>
        <item>Latest</item>
    </string-array>
    <string-array name="genre_filter">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Film-Noir</item>
        <item>Game-Show</item>
        <item>Film-Noir</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>News</item>
        <item>Reality-TV</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Sport</item>
        <item>Talk-show</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_internet_missing">Cannot reach server</string>
    <string name="internet_missing_message">Please check network and try again.  For first time use there must be a Internet connection available.</string>
    <string name="enable_wifi">Enable Wi-Fi</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_found">Nothing found.</string>
    <string name="description">Description:</string>
    <string name="quality_720p">720p</string>
    <string name="quality_1080p">1080p</string>
    <string name="quality_3d">3D</string>
    <string name="server_down">The server is not responding, new movies can not be fetched. Please try again later.</string>
    <string name="sortByRecent">Sort by Most Recent</string>
    <string name="magnet_Btn">Magnet Link</string>
    <string name="download_Btn">Download</string>
    <string name="download">Download:</string>
    <string name="runtime">Runtime:</string>
</resources>
