<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sortByRecent"
        android:orderInCategory="1"
        android:title="@string/sortByRecent"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByName"
        android:orderInCategory="1"
        android:title="@string/sortByName"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByRating"
        android:orderInCategory="2"
        android:title="@string/sortByRating"
        app:showAsAction="never" />
    <item
        android:id="@+id/sortByYear"
        android:orderInCategory="3"
        android:title="@string/sortByYear"
        app:showAsAction="never" />
</menu>