<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="capitalria.mk.moviesfragment.capitalria.com.moviesfragment.SearchFragment">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/searchName"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qualityTV"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quality"
            android:textAppearance="?android:attr/textAppearance"
            android:textSize="@dimen/font_size_m" />

        <Spinner
            android:id="@+id/qualitySpinner"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:entries="@array/quality_filter"
            android:prompt="@string/prompt"
            android:textSize="@dimen/font_size_m" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/genreTV"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre"
            android:textAppearance="?android:attr/textAppearance"

            android:textSize="@dimen/font_size_m" />

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:dropDownWidth="wrap_content"

            android:entries="@array/genre_filter"
            android:prompt="@string/prompt"
            android:textSize="@dimen/font_size_m" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ratingTV"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating"

            android:textAppearance="?android:attr/textAppearance"
            android:textSize="@dimen/font_size_m" />

        <Spinner
            android:id="@+id/ratingSpinner"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:entries="@array/rating_filter"

            android:prompt="@string/prompt"
            android:textSize="@dimen/font_size_m" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderByTV"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order"

            android:textAppearance="?android:attr/textAppearance"
            android:textSize="@dimen/font_size_m" />

        <Spinner
            android:id="@+id/orderBySpinner"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:dropDownWidth="wrap_content"

            android:entries="@array/order_filter"
            android:prompt="@string/prompt"
            android:textSize="@dimen/font_size_m" />
    </LinearLayout>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:background="@color/colorPrimary"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size_m" />

</LinearLayout>